# snyker

./: .gitignore  .snyk  CONTRIBUTING.md  README.md  commit_message.txt  main.py  pyproject.toml
.githooks/: post-push
.github/workflows/: publish-to-test-pypi.yml  python-tests.yml  snyk-sast.yml  test-snyker.yml
examples/: basic_sdk_usage.py  debug_issue.py  export_group_policies.py  export_sast_sqli_issues.py  find_issue_by_attribute_value.py  find_issues_by_purl.py  get_asset_project_test_surface.py  get_group_package_vulnerabilities_without_cves.py  monitor_and_find_critical_issues.py  query_project.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
snyker/: __init__.py  api_client.py  asset.py  cli_wrapper.py  config.py  group.py  issue.py  organization.py  policy.py  project.py  purl.py  target.py  utils.py
tests/: cli_wrapper_test.py  test_asset_model.py  test_group_model.py  test_issue_model.py  test_organization_model.py  test_policy_model.py  test_project_model.py  test_purl_model.py
tmp/: openapi-2024-10-15.json
