[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snyker" # Replace with your package's actual name
version = "0.1.0"          # Replace with your package's version
authors = [
    { name = "Tim Gowan", email = "tim.gowan@snyk.io" },
]
description = "Collection of utilities leveraging the Snyk API and a wrapper for the Snyk CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["snyk", "snyk-cli","snyk-cli", "automation", "security"] # Add relevant keywords

# This is the section derived from your import statements
dependencies = [
    "requests>=2.31.0", # For 'import requests'
    "urllib3"          # For 'from urllib3.util.retry import Retry'

]

[project.urls]
"Homepage" = "https://github.com/tim-snyk/snyker"
"Bug Tracker" = "https://github.com/tim-snyk/snyker/issues"
"Documentation" = "https://github.com/tim-snyk/snyker/blob/main/README.md"

# Optional: if you have command-line scripts
# [project.scripts]
# my-command = "my_awesome_package.module:main_function"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"

[tool.snyker.api_client]
base_url = "https://api.snyk.io"
max_retries = 15
backoff_factor = 0.5
status_forcelist = [429, 500, 502, 503, 504] # HTTP status codes that trigger a retry
logging_level = "INFO" # Can be DEBUG, INFO, WARNING, ERROR
default_rate_limit_retry_after = 5.0 # Default seconds to wait if 429 response has no Retry-After header
