# pyproject.toml (fully converted for Poetry)

[project]
requires-python = ">=3.11"

[tool.poetry]
name = "snyker"
version = "0.2.0"
description = "Collection of utilities leveraging the Snyk API and a wrapper for the Snyk CLI"
authors = ["Tim Gowan <tim.gowan@snyk.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tim-snyk/snyker"
repository = "https://github.com/tim-snyk/snyker"
documentation = "https://github.com/tim-snyk/snyker/blob/main/README.md"
keywords = ["snyk", "snyk-api", "snyk-cli", "automation", "security"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.4,<3.0.0"
urllib3 = ">=2.5.0,<3.0.0"
pydantic = ">=2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
pytest = "^8.3.5"

# The build-system section now points to Poetry's build backend
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Your custom tool configuration remains unchanged
[tool.snyker.api_client]
base_url = "https://api.snyk.io"
max_retries = 15
backoff_factor = 0.5
status_forcelist = [429, 500, 502, 503, 504]
logging_level = "INFO"
default_rate_limit_retry_after = 5.0
default_page_limit = 100

[tool.snyker.sdk_settings]
loading_strategy = "lazy"

[tool.snyker.examples]
group_id = "9365faba-3e72-4fda-9974-267779137aa6"
org_id = "8c12aada-dec1-4670-a39e-60fc1ec59e55"
project_id_sca = "915d2170-2e59-4a76-985f-47bf226999cf"
project_id_sast = "73ee3b63-f372-44a9-8b06-5a708d5c5def"
asset_name_contains = "snyker"
asset_type = "repository"

[tool.flake8]
exclude = [".venv"]
